--- a/build.yaml
+++ b/build.yaml
@@ -17,9 +17,9 @@ include:
     shield: hshs52_left nice_view_adapter nice_view
   - board: nice_nano_v2
     shield: hshs52_right nice_view_adapter nice_view
-  - board: nice_nano_v2
-    shield: hshs46_left nice_view_adapter nice_view
-  - board: nice_nano_v2
-    shield: hshs46_right nice_view_adapter nice_view
+#  - board: nice_nano_v2
+#    shield: hshs46_left nice_view_adapter nice_view
+#  - board: nice_nano_v2
+#    shield: hshs46_right nice_view_adapter nice_view
   - board: nice_nano_v2
     shield: settings_reset
